--- a/Tutorials/.vscode/launch.json
+++ b/Tutorials/.vscode/launch.json
@@ -7,7 +7,7 @@
 
             {
             "name": "Python: Current File",
-            "type": "python",
+            "type": "python27",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
