--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,21 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-        {
-            "type": "julia",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "{C:\\Users\\asifd\\AppData\\Local\\Programs\\Julia\\Julia-1.4.2\\bin\\julia.exe}/Program",
-            "stopOnEntry": false
-        },
         {
             "type": "julia",
             "request": "launch",
             "name": "Run active Julia file",
             "program": "${file}",
             "stopOnEntry": false,
-            "cwd": "{workspaceFolder}",
+            "cwd": "${workspaceFolder}",
             "juliaEnv": "${command:activeJuliaEnvironment}"
         }
     ]
